Fixed gray box in Add_product

--- a/public/css/Add_New_Product.css
+++ b/public/css/Add_New_Product.css
@@ -146,6 +146,10 @@ main {
 .a2 {
     margin-top: 20px;
 }
+.photo_section.image-loaded {
+    background-color: transparent;
+}
+
 
 .delete-image-btn {
     display: block;
