--- a/public/css/Product_Detail.css
+++ b/public/css/Product_Detail.css
@@ -9,6 +9,13 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
+    display: flex;
+    flex-direction: column;
+}
+
+
+main {
+    flex: 1;
 }
 
 /* --- Blue Panel --- */
